--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,10 +11,15 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuración de Hibernate (JPA)
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # Configuración de logs
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.web=INFO
+
+# Configurar zona horaria a Colombia (UTC-5)
+spring.jpa.properties.hibernate.jdbc.time_zone=America/Bogota
+# Configurar el servidor con zona horaria colombiana
+server.timezone=America/Bogota
