--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,63 @@
 version: '3.8'
 
 services:
-  mysql:
-    image: mysql:8.0
-    container_name: mysql_container
+  mariadb:
+    image: mariadb:11.3
+    container_name: mariadb-container
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: parcial
-      MYSQL_USER: usuario
-      MYSQL_PASSWORD: usuario123
+      MARIADB_ROOT_PASSWORD: rootpassword
+      MARIADB_DATABASE: parcial_db
+      MARIADB_USER: root
+      MARIADB_PASSWORD: rootpassword
     ports:
-      - "5500:3306"
+      - "3306:3306"
     volumes:
-      - mysql_data:/var/lib/mysql
+      - mariadb_data:/var/lib/mysql
+      - ./backup:/backup
+    networks:
+      - parcial_net
 
-  adminer:
-    image: adminer
-    container_name: adminer_container
+  backup:
+    image: mariadb:11.3
+    container_name: mariadb-backup
+    depends_on:
+      - mariadb
+    entrypoint: >
+      /bin/sh -c "
+      while true; do
+        timestamp=$(date +\"%Y-%m-%d_%H-%M-%S\");
+        mysqldump -hmariadb-container -uroot -prootpassword parcial_db > /backup/backup_$${timestamp}.sql;
+        sleep 86400;
+      done
+      "
+    volumes:
+      - ./backup:/backup
+    networks:
+      - parcial_net
+
+  microservicio:
+    image: brahiancg/bcaceresa:latest
+    container_name: microservicio-parcial
     restart: always
     ports:
-      - "8000:8080"
+      - "4500:4500"
     environment:
-      ADMINER_DEFAULT_SERVER: mysql
+      # Variables utilizadas en application.properties (se pueden sobreescribir aquí)
+      SPRING_APPLICATION_NAME: primero
+      SERVER_PORT: 4500
+      # Es importante que el URL de la BD use el nombre del contenedor de la DB
+      SPRING_DATASOURCE_URL: jdbc:mariadb://mariadb-container:3306/parcial_db
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: rootpassword
+      SPRING_JPA_HIBERNATE_DDL-AUTO: create
+    depends_on:
+      - mariadb
+    networks:
+      - parcial_net
 
 volumes:
-  mysql_data:
-    driver: local
+  mariadb_data:
+
+networks:
+  parcial_net:
