--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,15 +3,12 @@ spring.application.name=primero
 # Configuración del servidor
 server.port=4500
 
-# Configuración de la base de datos MySQL
-spring.datasource.url=jdbc:mysql://localhost:5500/parcial?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mariadb://localhost:3306/parcial_db
 spring.datasource.username=root
 spring.datasource.password=rootpassword
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
-# Configuración de Hibernate (JPA)
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
